Plugin Name: CoursePress Pro
Author: Marko Miljus ( Incsub ) / Rheinard Korf ( Incsub )

CHANGE LOG
=================================================

== Changelog ==

= 1.2.1.6 =
* Fixed bug where visual editor prevented unit elements from saving.

= 1.2.1.5 =
* Fixed issue with instructor's profile avatar shortcode
* Fixed conflicts with bbPress (not showing topics when CoursePress is active)

= 1.2.1.4 =
* Fixed issue with incorrect registration of module post type
* Fixed issues with hard coded http:\\ resources (google fonts and images in the theme and plugin)
* Fixed issue with not saving Login Slug
* Added additional options in settings for pages (instead of virtual pages) for enrollment process, login page, signup page, student dashboard and student settings
* Visual editor improvements.  
* Small code improvements

= 1.2.1.3 =
* Fixed issue with MarketPress product page infinite loop when CoursePress is active
* Fixed issue with instructor avatars preview

= 1.2.1.2 =
* Fixed issue with enrollment date and time (it uses now current_time( 'timestamp') instead of time())
* Fixed issue with media shortcode display in the CoursePress theme
* Fixed issue with course archive for courses without media set

= 1.2.1.1 =
* Added additional settings for controlling wp-login redirection
* Fixed issue with "Instructor Capabilities" settings access as a student
* Various database improvements. 
* Added course progress display to student workbook.  
* Added unit progress to CoursePress theme on student workbook.  
* Added categories in the single post and blog archive
* Fixed issue with hidden comment form when plugin is activated
* Added passcode fields on login and signup popup forms
* Minor changes to enrollment popup window. 

= 1.2.1 =
* Fixed issue with incorrectly displayed footer on student login page
* Fixed issue with BuddyPress autocomplete on Compose Message page
* Added a number of hooks in the main CoursePress class

= 1.2 =
* Added Duplicate Course feature