@@ -8,6 +8,7 @@ CHANGE LOG
 
 = 1.2.1.6 =
 * Fixed bug where visual editor prevented unit elements from saving.
+* Fixed bug after duplicating course. Can now edit the course again.
 
 = 1.2.1.5 =
 * Fixed issue with instructor's profile avatar shortcode
